--- a/content/literatur.bib
+++ b/content/literatur.bib
@@ -3,7 +3,19 @@
 % https://scholar.google.de/
 % https://www.amazon.de
 
-@book{monk_action-buch:2016,
+@book{monk_raspberry:2014,
+	location = {Beijing},
+	edition = {1},
+	title = {Raspberry Pi Kochbuch},
+	isbn = {978-3-95561-638-0},
+	abstract = {Das Raspberry-Pi-Universum wächst täglich. Ständig werden neue Erweiterungs-Boards und Software-Bibliotheken für den Single-Board-Computer entwickelt. Im Raspberry Pi Kochbuch erläutert der profilierte Autor Simon Monk mehr als 200 Rezepte für den Raspberry Pi: die Programmierung mit Python, vielfältige Display-Varianten, Netzwerkanbindungen, die Zusammenarbeit mit dem Arduino, Sensoren und und und...},
+	pagetotal = {408},
+	publisher = {O'Reilly Verlag {GmbH} \& Co. {KG}},
+	author = {Monk, Simon},
+	date = {2014-05-30}
+}
+
+@book{monk_action_buch:2016,
 	location = {Heidelberg},
 	edition = {1},
 	title = {Das Action-Buch für Maker: Bewegung, Licht und Sound mit Arduino und Raspberry Pi - Experimente und Projekte},
@@ -16,7 +28,7 @@
 	date = {2016-09-29}
 }
 
-@book{monk_elektronik-hacks:2013,
+@book{monk_elektronik_hacks:2013,
 	location = {Heidelberg Hamburg},
 	edition = {2014},
 	title = {Elektronik-Hacks: Ein Do-It-Yourself-Guide für Einsteiger. Zahlreiche Projekte mit Sensoren, Fernsteuerungen, Motoren, Arduino},
