--- a/content/inhalt.tex
+++ b/content/inhalt.tex
@@ -7,8 +7,14 @@
 \input{tex/7-gitWorkflow}
 
 \chapter{Kapitel} 
+\input{tex/Abbildungen}
+
+\chapter{Kapitel} 
 \input{tex/gpio-pinbelegung}
 
 \chapter{Kapitel} 
 \input{tex/piMonk}
+
+\chapter{Kapitel} 
+\input{tex/Quellcode}
 
